Pretty darn good

--- a/episodes.html
+++ b/episodes.html
@@ -22,8 +22,7 @@
       <div class="ep-intro">
         <h2>Episode Overview</h2>
         <p>
-          This page highlights a few important parts of Yu-Gi-Oh! ARC-V. You can change
-          the episode names and comments later to match your own favorites.
+          This page highlights a few important parts of Yu-Gi-Oh! ARC-V.
         </p>
         <ol>
           <li>Early: Yuya develops his Entertainment Duel style.</li>
@@ -34,7 +33,7 @@
 
       <div class="ep-grid">
         <div class="ep-card">
-          <img src="https://via.placeholder.com/400x230" alt="Early duel scene">
+          <img src="https://ms.yugipedia.com//9/93/ClownYuyaandIshijima.png?download" alt="Early duel scene">
           <h3>Episode 1: First Big Duel</h3>
           <p>
             Yuya is pushed into a serious duel in front of a crowd. It sets up his
@@ -47,20 +46,7 @@
         </div>
 
         <div class="ep-card">
-          <img src="https://via.placeholder.com/400x230" alt="You Show Duel School scene">
-          <h3>Early School Episode</h3>
-          <p>
-            We see You Show Duel School and why it looks “weak” from the outside
-            but actually supports creative duel styles.
-          </p>
-          <ul>
-            <li>Focus: Yuya and Yuzu</li>
-            <li>Theme: Believing in a small school</li>
-          </ul>
-        </div>
-
-        <div class="ep-card">
-          <img src="https://via.placeholder.com/400x230" alt="Pendulum Summon moment">
+          <img src="https://ms.yugipedia.com//2/2f/PendulumSummon.png" alt="Pendulum Summon moment">
           <h3>The Pendulum Reveal</h3>
           <p>
             Pendulum Summoning appears and changes how duels work. It becomes the
@@ -73,7 +59,20 @@
         </div>
 
         <div class="ep-card">
-          <img src="https://via.placeholder.com/400x230" alt="Synchro style city scene">
+          <img src="https://ms.yugipedia.com//thumb/2/20/PendulumTraining.png/375px-PendulumTraining.png" alt="You Show Duel School scene">
+          <h3>Early School Episode</h3>
+          <p>
+            We see You Show Duel School and why it looks “weak” from the outside
+            but actually supports creative duel styles.
+          </p>
+          <ul>
+            <li>Focus: Yuya and Yuzu</li>
+            <li>Theme: Believing in a small school</li>
+          </ul>
+        </div>
+
+        <div class="ep-card">
+          <img src="https://ms.yugipedia.com//0/04/Night_City.png" alt="Synchro style city scene">
           <h3>Synchro Dimension Arc</h3>
           <p>
             The cast ends up in a city where duels affect rankings and freedom.
@@ -86,20 +85,7 @@
         </div>
 
         <div class="ep-card">
-          <img src="https://via.placeholder.com/400x230" alt="Emotional dragon duel">
-          <h3>Emotional Dragon Duel</h3>
-          <p>
-            Yuya’s dragons reflect his emotions. When he loses control, the duel
-            feels dangerous, not just flashy.
-          </p>
-          <ul>
-            <li>Focus: Yuya and his dragons</li>
-            <li>Theme: Fear of your own power</li>
-          </ul>
-        </div>
-
-        <div class="ep-card">
-          <img src="https://via.placeholder.com/400x230" alt="Late series cast shot">
+          <img src="https://ms.yugipedia.com//a/ab/ArcV_134.png" alt="Action Duel scene">
           <h3>Late-Series Turning Point</h3>
           <p>
             Different dimensions, different versions of Yuya, and old plans all
@@ -110,11 +96,24 @@
             <li>Theme: Identity and choice</li>
           </ul>
         </div>
+
+        <div class="ep-card">
+          <img src="https://ms.yugipedia.com//f/f5/ArcV_147.png" alt="Emotional dragon duel">
+          <h3>Emotional Dragon Duel</h3>
+          <p>
+            Yuya’s dragons reflect his emotions. When he loses control, the duel
+            feels dangerous, not just flashy.
+          </p>
+          <ul>
+            <li>Focus: Yuya and his dragons</li>
+            <li>Theme: Fear of your own power</li>
+          </ul>
+        </div>
       </div>
     </div>
 
     <div class="footer">
-      <p>© 2025 Yu-Gi-Oh! ARC-V Episodes. Student project.</p>
+      <p>© 2025 Yu-Gi-Oh! ARC-V Episodes, Konami. Student project.</p>
     </div>
   </body>
 </html>
