--- a/gallery.html
+++ b/gallery.html
@@ -26,25 +26,21 @@
           that lean into “maximum dramatic hair”. This page shows a few important
           faces and places.
         </p>
-        <p>
-          You can replace these placeholder images with real screenshots later,
-          like Yuya, Yuzu, Reiji, the school, and your favorite duel moments.
-        </p>
       </div>
 
       <div class="gal-grid">
         <div class="gal-item">
-          <img src="https://via.placeholder.com/350x250" alt="Yuya Sakaki portrait style">
+          <img src="https://ms.yugipedia.com//a/a0/Yuya_Sakaki.png" alt="Yuya Sakaki portrait style">
           <h3>Yuya Sakaki</h3>
           <p>
             The main character. An Entertainment Duelist who wants to make people
-            smile, even when things get serious.
+            smile, even when things get serious, stubborn one.
           </p>
         </div>
 
         <div class="gal-item">
-          <img src="https://via.placeholder.com/350x250" alt="Yuzu/Zuzu portrait style">
-          <h3>Yuzu / Zuzu</h3>
+          <img src="https://ms.yugipedia.com//1/13/Zuzu_Boyle.png" alt="Zuzu/Yuzu portrait style">
+          <h3>Zuzu / Yuzu</h3>
           <p>
             Yuya’s friend who backs him up in duels and arguments. Known for her
             strong sense of justice (and her paper fan).
@@ -52,34 +48,34 @@
         </div>
 
         <div class="gal-item">
-          <img src="https://via.placeholder.com/350x250" alt="Antagonist portrait style">
+          <img src="https://ms.yugipedia.com//f/fe/Leo_Akaba.png" alt="Antagonist portrait style">
           <h3>Major Antagonist</h3>
           <p>
             ARC-V has several “villain” figures, from CEOs to invaders from
-            other dimensions. Many of them have their own reasons.
+            other dimensions. Many of them have their own reasons. This one's the CEO type.
           </p>
         </div>
 
         <div class="gal-item">
-          <img src="https://via.placeholder.com/350x250" alt="You Show Duel School">
+          <img src="https://ms.yugipedia.com//7/7d/You_Show_Duel_School.png" alt="You Show Duel School">
           <h3>You Show Duel School</h3>
           <p>
             A small, “weak-looking” duel school that actually encourages fun and
-            creativity. It feels like home for the main cast.
+            creativity, being more of a hub for outcasts in contrast to LID. It feels like home for the main cast.
           </p>
         </div>
 
         <div class="gal-item">
-          <img src="https://via.placeholder.com/350x250" alt="Emotional ARC-V scene">
+          <img src="https://ms.yugipedia.com//b/bf/ArcV_034.png" alt="Emotional ARC-V scene">
           <h3>Emotional Moment</h3>
           <p>
             The show likes to drop big emotional scenes in the middle of duels.
-            Tears, shouting, and card effects all at once.
+            Tears, shouting, and card effects all at once... they are playing a card game for your information.
           </p>
         </div>
 
         <div class="gal-item">
-          <img src="https://via.placeholder.com/350x250" alt="Action Duel scene">
+          <img src="https://ms.yugipedia.com//7/7b/ArcV_056.png" alt="Action Duel scene">
           <h3>Action Duel</h3>
           <p>
             Action Duels mix running, jumping, and grabbing Action Cards from
@@ -92,21 +88,21 @@
         <h2>Visual Details to Watch</h2>
         <ul>
           <li>How each dimension uses color to show its mood.</li>
-          <li>How Yuya’s dragons change as the story goes on.</li>
+          <li>How Yuya’s roster of dragons change as the story goes on.</li>
           <li>Posters and signs in the background of city scenes.</li>
-          <li>Differences between “fun” duels and war-like duels.</li>
+          <li>Differences between “fun” duels and war-like duels, because it's war.</li>
         </ul>
         <div class="gal-highlight">
           <p>
             Even if you ignore the card text, you can follow a lot of the story
-            just by watching colors, expressions, and posing.
+            just by watching colors, expressions, and posing, not surprising.
           </p>
         </div>
       </div>
     </div>
 
     <div class="footer">
-      <p>© 2025 Yu-Gi-Oh! ARC-V Gallery. Student project.</p>
+      <p>© 2025 Yu-Gi-Oh! ARC-V Gallery, Konami. Student project.</p>
     </div>
   </body>
 </html>
