--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <div class="home-grid">
       <div class="home-hero">
-        <!-- Replace this with an ARC-V hero image later -->
-        <img src="https://via.placeholder.com/900x350" alt="Yu-Gi-Oh! ARC-V style hero image">
+        <!-- HERO IMAGE: ARC-V logo, centered by CSS -->
+        <img class="center-img" src="https://ms.yugipedia.com//a/ab/Arc-VLogoEnglishC.png" alt="Yu-Gi-Oh! ARC-V style hero image">
         <p>
           <strong>Yu-Gi-Oh! ARC-V</strong> follows Yuya Sakaki, an Entertainment Duelist
           who wants to make people smile with his duels. As the story goes on, he gets
@@ -56,8 +56,10 @@
           <li>Dimensions: Standard, Synchro, Xyz, Fusion</li>
           <li>Theme: Identity, performance, and choice</li>
         </ul>
-        <!-- Replace this with a cast image later -->
-        <img src="https://via.placeholder.com/300x200" alt="Yu-Gi-Oh! ARC-V main cast style image">
+
+        <!-- Replace this with one of your own screenshots if you want -->
+        <img class="center-img" src="https://ms.yugipedia.com//b/b9/ARC_of_Smile%21.png" alt="Yu-Gi-Oh! ARC-V main cast style image">
+
         <div class="home-highlight">
           <p>
             ARC-V is known for flashy duels, emotional dragons, and the idea that
@@ -76,101 +78,17 @@
           <li>Multiple versions of “Yuya” from different worlds.</li>
           <li>A plot that slowly reveals how all the dimensions connect.</li>
         </ol>
-        <!-- Third image for this page -->
-        <img src="https://via.placeholder.com/500x250" alt="Action Duel style scene">
+        <p>
+          Oh, and if you don't like dueling... stay out of my territory.
+        </p>
+
+        <!-- Replace this with another screenshot if you want -->
+        <img src="https://ms.yugipedia.com//9/95/Yuya_riding.png" alt="Action Duel style scene">
       </div>
     </div>
 
     <div class="footer">
-      <p>© 2025 Yu-Gi-Oh! ARC-V Fan Site. Student project, not official.</p>
-    </div>
-  </body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Yu-Gi-Oh! ARC-V - Home</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body class="home">
-    <div class="nav">
-      <div class="nav-inner">
-        <div class="nav-title">Yu-Gi-Oh! ARC-V</div>
-        <div class="nav-links">
-          <a href="index.html">Home</a>
-          <a href="episodes.html">Episodes</a>
-          <a href="gallery.html">Gallery</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="home-grid">
-      <div class="home-hero">
-        <!-- Replace this with an ARC-V hero image later -->
-        <img src="https://via.placeholder.com/900x350" alt="Yu-Gi-Oh! ARC-V style hero image">
-        <p>
-          <strong>Yu-Gi-Oh! ARC-V</strong> follows Yuya Sakaki, an Entertainment Duelist
-          who wants to make people smile with his duels. As the story goes on, he gets
-          pulled into a conflict that spans multiple dimensions.
-        </p>
-      </div>
-
-      <div class="home-info">
-        <h2>About the Show</h2>
-        <p>
-          ARC-V starts in the Standard Dimension, where Yuya studies at You Show Duel
-          School. After showing off Pendulum Summoning, he becomes the center of a
-          much larger story.
-        </p>
-        <p>
-          Different dimensions focus on different summoning styles and different rules.
-          The characters have to figure out what “entertainment” means when duels
-          suddenly have real consequences.
-        </p>
-        <ul>
-          <li>Genre: Shōnen / Action / Fantasy</li>
-          <li>Main character: Yuya Sakaki</li>
-          <li>Key mechanic: Pendulum Summoning</li>
-          <li>Running time: 148 episodes</li>
-        </ul>
-      </div>
-
-      <div class="home-side">
-        <h2>Quick Facts</h2>
-        <ul>
-          <li>Goal: Make people smile with duels</li>
-          <li>Dimensions: Standard, Synchro, Xyz, Fusion</li>
-          <li>Theme: Identity, performance, and choice</li>
-        </ul>
-        <!-- Replace this with a cast image later -->
-        <img src="https://via.placeholder.com/300x200" alt="Yu-Gi-Oh! ARC-V main cast style image">
-        <div class="home-highlight">
-          <p>
-            ARC-V is known for flashy duels, emotional dragons, and the idea that
-            a duel can be both a show and a serious fight at the same time.
-          </p>
-        </div>
-      </div>
-
-      <div class="home-extra">
-        <h2>Why Watch ARC-V?</h2>
-        <p>
-          If you like Yu-Gi-Oh! in general, ARC-V adds:
-        </p>
-        <ol>
-          <li>New duel mechanics and crazy Action Duels.</li>
-          <li>Multiple versions of “Yuya” from different worlds.</li>
-          <li>A plot that slowly reveals how all the dimensions connect.</li>
-        </ol>
-        <!-- Third image for this page -->
-        <img src="https://via.placeholder.com/500x250" alt="Action Duel style scene">
-      </div>
-    </div>
-
-    <div class="footer">
-      <p>© 2025 Yu-Gi-Oh! ARC-V Fan Site. Student project, not official.</p>
+      <p>© 2025 Yu-Gi-Oh! ARC-V Fan Site, Konami. Student project, not official.</p>
     </div>
   </body>
 </html>
