--- a/gallery.html
+++ b/gallery.html
@@ -102,7 +102,7 @@
     </div>
 
     <div class="footer">
-      <p>© 2025 Yu-Gi-Oh! ARC-V Gallery, Konami. Student project.</p>
+      <p>© 2025 Yu-Gi-Oh! ARC-V, Konami,  Gallery. Student project.</p>
     </div>
   </body>
 </html>
