--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="footer">
-      <p>© 2025 Yu-Gi-Oh! ARC-V Fan Site, Konami. Student project, not official.</p>
+      <p>© 2025 Yu-Gi-Oh! ARC-V, Konami,  Fan Site. Student project, not official.</p>
     </div>
   </body>
 </html>
